--- a/src/components/steps-list/styles.scss
+++ b/src/components/steps-list/styles.scss
@@ -2,4 +2,6 @@
   display: flex;
   flex-wrap: wrap;
   align-self: center;
+  align-items: center;
+  justify-content: center;
 }
